; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_nsutils.c_acpi_ns_get_type.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/acpica/extr_nsutils.c_acpi_ns_get_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_namespace_node = type { i64 }

@ns_get_type = common dso_local global i32 0, align 4
@AE_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"Null Node parameter\00", align 1
@ACPI_TYPE_ANY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_ns_get_type(%struct.acpi_namespace_node* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.acpi_namespace_node*, align 8
  store %struct.acpi_namespace_node* %0, %struct.acpi_namespace_node** %3, align 8
  %4 = load i32, i32* @ns_get_type, align 4
  %5 = call i32 @ACPI_FUNCTION_TRACE(i32 %4)
  %6 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %3, align 8
  %7 = icmp ne %struct.acpi_namespace_node* %6, null
  br i1 %7, label %13, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* @AE_INFO, align 4
  %10 = call i32 @ACPI_WARNING(i32 ptrtoint ([20 x i8]* @.str to i32))
  %11 = load i32, i32* @ACPI_TYPE_ANY, align 4
  %12 = call i32 @return_UINT32(i32 %11)
  br label %13

13:                                               ; preds = %8, %1
  %14 = load %struct.acpi_namespace_node*, %struct.acpi_namespace_node** %3, align 8
  %15 = getelementptr inbounds %struct.acpi_namespace_node, %struct.acpi_namespace_node* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = trunc i64 %16 to i32
  %18 = call i32 @return_UINT32(i32 %17)
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i32) #1

declare dso_local i32 @ACPI_WARNING(i32) #1

declare dso_local i32 @return_UINT32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
